## Process this file with automake to produce Makefile.in.

# Copyright 2007 Johannes Lehtinen
# This Makefile is free software; Johannes Lehtinen gives unlimited
# permission to copy, distribute and modify it.

includecpluffxxdir = $(includedir)/cpluffxx

includecpluffxx_HEADERS = \
	callbacks.h defines.h enums.h except.h info.h
